<resources>
    <string name="app_name">Newszen</string>
    <string name="title_activity_topics">Topics</string>
    <string name="technology">Technology</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="health">Health</string>
    <string name="business">Business</string>
    <string name="fitness">Fitness</string>
    <string name="money">Money</string>
    <string name="politics">Politics</string>
    <string name="celebrity">Celebrity</string>
    <string name="tv">TV</string>
    <string name="science">Science</string>
    <string name="music">Music</string>
    <string name="continue_to_dashboard">Continue to Dashboard.</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="sports">Sports</string>
    <string name="title">Title</string>
    <string name="publisher">Publisher</string>
    <string name="summary">Summary</string>
    <string name="download">Download</string>
    <string name="home">Home</string>
    <string name="downloaded">Downloaded</string>
    <string name="receive_notifications_for">Receive notifications for:</string>
    <string name="notification_body">\"New stories available!</string>
    <string name="save">Save</string>
    <string name="stories_near_you">Stories Near You</string>
    <string name="topics">Topics</string>
    <string name="downloaded">Downloaded</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="logout">Logout</string>
    <string name="newszen">Newszen</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

</resources>