<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailField"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:fontFamily="@font/roboto_regular"
        android:textSize="21sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="220dp"
        android:backgroundTint="@color/secondary_green"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/prompt_email"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/passwordField"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:fontFamily="@font/roboto_regular"
        android:textSize="21sp"
        android:textAlignment="center"
        android:backgroundTint="@color/secondary_green"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/emailField"
        android:layout_marginTop="70dp"
        android:autofillHints="@string/prompt_password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/secondary_green"
        android:onClick="signUpButtonClicked"
        android:text="@string/sign_up"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="loginButtonClicked"
        android:text="@string/login"
        android:textColor="@color/black" />

</RelativeLayout>