<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationSettings">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive_notifications_for"
        android:fontFamily="@font/roboto_medium"
        android:textSize="18sp"
        android:layout_margin="20dp"
        android:id="@+id/receiveNotificationsTextView"/>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/businessSwitch"
        android:layout_below="@id/receiveNotificationsTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="20dp"
        android:enabled="false"
        android:onClick="businessSwitchTapped"
        android:text="@string/business"
        android:fontFamily="@font/roboto_regular"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/entertainmentSwitch"
        android:layout_below="@id/businessSwitch"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="20dp"
        android:enabled="false"
        android:onClick="entertainmentSwitchTapped"
        android:text="@string/entertainment"
        android:fontFamily="@font/roboto_regular"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/generalSwitch"
        android:layout_below="@id/entertainmentSwitch"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="20dp"
        android:enabled="false"
        android:onClick="generalSwitchTapped"
        android:text="@string/general"
        android:fontFamily="@font/roboto_regular"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/healthSwitch"
        android:layout_below="@id/generalSwitch"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="20dp"
        android:enabled="false"
        android:onClick="healthSwitchTapped"
        android:text="@string/health"
        android:fontFamily="@font/roboto_regular"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scienceSwitch"
        android:layout_below="@id/healthSwitch"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="20dp"
        android:enabled="false"
        android:onClick="scienceSwitchTapped"
        android:text="@string/science"
        android:fontFamily="@font/roboto_regular"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sportsSwitch"
        android:layout_below="@id/scienceSwitch"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="20dp"
        android:enabled="false"
        android:onClick="sportsSwitchTapped"
        android:text="@string/sports"
        android:fontFamily="@font/roboto_regular"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/technologySwitch"
        android:layout_below="@id/sportsSwitch"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="20dp"
        android:enabled="false"
        android:onClick="technologySwitchTapped"
        android:text="@string/technology"
        android:fontFamily="@font/roboto_regular"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saveButton"
        android:text="@string/save"
        android:background="@color/primary_purple"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:onClick="saveButtonClicked"/>

</RelativeLayout>