<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.MaterialComponents.Light.DarkActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Topics">

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Button"
        android:id="@+id/technologyButton"
        android:state_selected="false"
        android:backgroundTint="@color/button_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="200dp"
        android:onClick="technologyButtonClicked"
        android:text="@string/technology" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/healthButton"
        style="@style/Button"
        android:state_selected="false"
        android:backgroundTint="@color/button_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:layout_toEndOf="@+id/technologyButton"
        android:onClick="healthButtonClicked"
        android:text="@string/health" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/businessButton"
        style="@style/Button"
        android:state_selected="false"
        android:backgroundTint="@color/button_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business"
        android:layout_below="@+id/technologyButton"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:onClick="businessButtonClicked"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scienceButton"
        style="@style/Button"
        android:state_selected="false"
        android:backgroundTint="@color/button_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/science"
        android:layout_below="@+id/businessButton"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:onClick="scienceButtonClicked"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/entertainmentButton"
        style="@style/Button"
        android:state_selected="false"
        android:backgroundTint="@color/button_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entertainment"
        android:layout_toEndOf="@+id/businessButton"
        android:layout_below="@+id/technologyButton"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:onClick="entertainmentButtonClicked"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/generalButton"
        style="@style/Button"
        android:state_selected="false"
        android:backgroundTint="@color/button_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general"
        android:layout_toEndOf="@+id/scienceButton"
        android:layout_below="@+id/entertainmentButton"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:onClick="generalButtonClicked"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sportsButton"
        style="@style/Button"
        android:state_selected="false"
        android:backgroundTint="@color/button_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sports"
        android:layout_below="@+id/scienceButton"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="sportsButtonClicked"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/nextButton"
        android:layout_width="100dp"
        android:layout_height="47dp"
        android:backgroundTint="@color/primary_purple"
        android:onClick="nextButtonClicked"
        android:src="@drawable/arrow"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/continue_to_dashboard" />

</RelativeLayout>