<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Drawer"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:id="@+id/drawerLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Drawer">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerView"
            android:scrollbars="vertical"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/primary_purple"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        android:id="@+id/drawerFrame">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/roboto_medium"
            android:onClick="homeButtonClicked"
            android:text="@string/home"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/storiesNearYou"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/home"
            android:fontFamily="@font/roboto_medium"
            android:onClick="nearYouButtonClicked"
            android:text="@string/stories_near_you"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/topics"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/storiesNearYou"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium"
            android:onClick="topicsButtonClicked"
            android:text="@string/topics"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/downloaded"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/white"
            android:text="@string/downloaded"
            android:fontFamily="@font/roboto_medium"
            android:layout_below="@+id/topics"
            android:layout_marginTop="20dp"
            android:onClick="downloadedButtonClicked"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notificationSettings"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/white"
            android:text="@string/notification_settings"
            android:fontFamily="@font/roboto_medium"
            android:layout_below="@+id/downloaded"
            android:layout_marginTop="20dp"
            android:onClick="notificationsButtonClicked"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logout"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/white"
            android:text="@string/logout"
            android:fontFamily="@font/roboto_medium"
            android:layout_below="@+id/notificationSettings"
            android:layout_marginTop="20dp"
            android:onClick="logoutButtonClicked"/>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>