<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="282dp"
    android:layout_alignParentStart="true"
    android:layout_margin="20dp"
    tools:layout_editor_absoluteX="26dp"
    tools:layout_editor_absoluteY="105dp"
    android:elevation="8dp"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/stockimage" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentBottom="true"
            android:background="@color/primary_purple" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/container"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/publisherText"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:layout_below="@+id/titleText"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/publisher"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:maxLines="1" />

        <TextView
            android:id="@+id/summaryText"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@+id/publisherText"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/summary"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:maxLines="2"
            android:ellipsize="end"/>

        <Button
            android:id="@+id/downloadButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="100dp"
            android:layout_height="38dp"
            android:layout_alignBottom="@+id/container"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/download"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>